--- a/templates/projects/base_projects.html
+++ b/templates/projects/base_projects.html
@@ -52,6 +52,9 @@
                                         <a href="#" class="dropdown-item">
                                             <i class="fas fa-cog"></i> Settings
                                         </a>
+                                        <a href="{% url 'integrations' %}" class="dropdown-item">
+                                            <i class="fas fa-plug"></i> Integrations
+                                        </a>
                                         <div class="dropdown-divider"></div>
                                         <a href="{% url 'logout' %}" class="dropdown-item">
                                             <i class="fas fa-sign-out-alt"></i> Logout
